# png-palettes-optimization

./: COPYRIGHT  Cargo.toml  README.md
src/: error.rs  main.rs
src/command/: args_handle.rs  mod.rs
src/optimization/: frame.rs  mod.rs  optimization.rs  pngquant.rs
src/thread/: mod.rs  thread_pool.rs
